--- a/painelsiqueirax.html
+++ b/painelsiqueirax.html
@@ -285,15 +285,18 @@ body::before{
   </div>
 
   <div class="card">
-    <h2>Desban da Comunidade <span aria-hidden="true">🛡️</span></h2>
-    <p>
-      Sistema para <b>solicitação e gerenciamento de desban</b>.<br>
-      Ideal para quem teve um amigo banido e deseja recorrer.
-    </p>
-    <button class="cta cta-normal" id="goDesban">
-      ACESSAR DESBAN
-    </button>
-  </div>
+  <h2>IA <span aria-hidden="true">🧠</span></h2>
+
+  <p>
+    Assistente inteligente para <b>programação Pawn (SA-MP)</b>.<br>
+    Analisa erros, sugere correções e ajuda no desenvolvimento do servidor.
+  </p>
+
+  <button class="cta cta-normal" id="goIA">
+    ACESSAR IA
+  </button>
+</div>
+
 
   <div class="card">
     <h2>Gerenciamento de Servidores <span aria-hidden="true">🖥️</span></h2>
@@ -354,7 +357,7 @@ document.getElementById('goPremium')?.addEventListener('click', () => {
   window.location.href = 'gamemodesvip.html'
 })
 document.getElementById('goDesban')?.addEventListener('click', () => {
-  window.location.href = '#'
+  window.location.href = 'loginia.html'
 })
 document.getElementById('goServidores')?.addEventListener('click', () => {
   window.location.href = '#'
