--- a/painelsiqueirax.html
+++ b/painelsiqueirax.html
@@ -357,10 +357,11 @@ document.getElementById('goPremium')?.addEventListener('click', () => {
   window.location.href = 'gamemodesvip.html'
 })
 document.getElementById('goDesban')?.addEventListener('click', () => {
-  window.location.href = 'loginia.html'
+  window.location.href ="/.netlify/functions/discordloginia?return=" + encodeURIComponent("/ia.html");
 })
 document.getElementById('goServidores')?.addEventListener('click', () => {
-  window.location.href = '#'
+  window.location.href ="/.netlify/functions/discordloginia?return=" + encodeURIComponent("/ia.html");
+
 })
 
 // logout REAL (apaga cookie e sessão)
