--- a/planos.html
+++ b/planos.html
@@ -190,21 +190,46 @@
     </div>
   </main>
 
-  <script>
-    async function ensureLogin() {
-      const r = await fetch("/.netlify/functions/planos_me", { credentials: "include" });
-      if (!r.ok) {
-        location.href = "/.netlify/functions/discordlogin_planos?return=/planos.html";
-        return;
-      }
-      document.getElementById("app").style.display = "block";
+<script>
+  async function comprar(plano) {
+    const r = await fetch("/.netlify/functions/gerar_codigo_vip", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      credentials: "include",
+      body: JSON.stringify({ plano })
+    });
+
+    if (!r.ok) {
+      alert("Erro ao iniciar compra.");
+      return;
     }
 
-    function comprar(plano) {
-      alert("Próximo passo: gerar Pix + confirmar pagamento automático.\nPlano: " + plano);
-    }
+    const data = await r.json();
 
-    ensureLogin();
-  </script>
+    const checkoutVip =
+      plano === "vip_30d"
+        ? "https://checkout.infinitepay.io/maria-luiza-b19/3awKyljP3b"
+        : "https://checkout.infinitepay.io/maria-luiza-b19/7BshJTY0D3";
+
+    alert(
+`✅ Código gerado: ${data.codigo}
+
+👉 Agora você será redirecionado para o pagamento.
+
+Após pagar:
+1️⃣ Abra um ticket no Discord
+2️⃣ Envie esta mensagem:
+
+olá, acabei de adquirir vip (${data.plano_nome}) pelo valor de R$ ${data.valor_reais}
+código: ${data.codigo}
+
+Clique OK para continuar.`
+    );
+
+    window.open(checkoutVip, "_blank");
+  }
+</script>
+
+
 </body>
 </html>
